test/test_external-dns.yaml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
apiVersion: apps/v1
kind: Deployment #Incorrectly configured dummy deployment of external-dns
metadata:
  name: external-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.7.4
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=testdomain.com
        - --registry=txt
        ports:
        - name: metrics
          containerPort: 7979
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 250m
            memory: 250Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: metrics
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: metrics
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - "ALL"
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns-metrics
  labels:
    app: external-dns
spec:
  ports:
  - name: metrics
    port: 7979
    protocol: TCP
    targetPort: metrics
  selector:
    app: external-dns
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: external-dns
---
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRole
metadata:
  name: external-dns
rules:
- apiGroups:
  - ""
  resources:
  - "services"
  verbs:
  - "get"
  - "watch"
  - "list"
- apiGroups:
  - ""
  resources:
  - "pods"
  verbs:
  - "get"
  - "watch"
  - "list"
- apiGroups:
  - "extensions"
  resources:
  - "ingresses"
  verbs:
  - "get"
  - "watch"
  - "list"
- apiGroups:
  - ""
  resources:
  - "nodes"
  verbs:
  - "list"
- apiGroups:
  - ""
  resources:
  - "endpoints"
  verbs:
  - "get"
  - "watch"
  - "list"
---
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: external-dns-viewer
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: external-dns
subjects:
- kind: ServiceAccount
  name: external-dns
